Closed
Bug 656183
Opened 15 years ago
Closed 15 years ago
getContext() calls SetCanvasElement twice
Categories
(Core :: Graphics: Canvas2D, defect)
Core
Graphics: Canvas2D
Tracking
()
RESOLVED
FIXED
mozilla6
People
(Reporter: Benjamin, Assigned: Benjamin)
Details
Attachments
(1 file)
|
761 bytes,
patch
|
joe
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:2.0.1) Gecko/20110506 Firefox/4.0.1
Build Identifier:
GetContextHelper calls it, but so does Getcontext().
Reproducible: Always
| Assignee | ||
Comment 1•15 years ago
|
||
Attachment #531512 -
Flags: review?(joe)
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → benjamin
Comment 2•15 years ago
|
||
Comment on attachment 531512 [details] [diff] [review]
removes duplicate call
One suggestion: please use 8 lines of context and -p in your diffs, as mentioned in https://developer.mozilla.org/en/Mercurial_FAQ#How_can_I_diff_and_patch_files.3F
Attachment #531512 -
Flags: review?(joe) → review+
Updated•15 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Comment 3•15 years ago
|
||
Comment 4•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
OS: Linux → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Whiteboard: [fixed-in-cedar]
Target Milestone: --- → mozilla6
Version: unspecified → Trunk
You need to log in
before you can comment on or make changes to this bug.
Description
•