Bug 656183: remove duplicate call to SetCanvasElement.  r=joe